		Repairing at a merchant is now automatically handled.
		Added support for adding achievement criteria info to the tooltips of creatures and items. (The database supporting this feature will expand over time.)
		Added support for auto selecting the outpost in Talador and Spires of Arak.
	Quests:
		Added a glow to the corresponding button during the "Dead Drop" quest in Bastion.
		Added a glow to the corresponding button during the "Just Winging It" world quest in Maldraxxus.
		Added a glow to the corresponding button during the "We'll Make an Aspirant Out of You" world quest in Bastion.
	Dialog:
		Added multiple dialogs for NPCs involved in the Maw assaults.
		Added dialogs for multiple NPCs in Torghast.
		Added multiple dialogs for NPCs in all four Shadowlands zones.
		Added a dialog to skip the Covenant introduction for Night Fae.
		Added a dialog for the NPCs involved in the "Insider Trading" quest in Oribos.
		Added a dialog for Archivist Roh-Suir in Korthia.
		Added a dialog for Marshal Dughan in Elwynn Forest.
		Added multiple dialogs for NPCs involved in the Night Fae Campaign.
		Added dialogs for NPCs in Argus zones.
		Added support for more Stable Masters (and healing battle pets.)
	Options:
		Added an option to control Notes on tooltips.
		When opening the options, the player's chosen expansion for Chromie Time will show in the edit box.
		The "Garrison Tables" option now also controls the automation of outpost selection in Gorgrond, Talador, and Spires of Arak.
		The "Adventure Maps" option now also controls Hero's Call Board automation.
	Merchants:
		All skills from trainers are now automatically learned if the player has +300 gold more than the cost or twice the cost.
	Notes:
		Added a note for exposing the Exposed Boggarts during the "Tough Crowd" world quest in Ardenweald.
		Added a note for which Gatamatos to click during the "Training Regimen" world quest in Bastion.
		Notes on objects is no longer supported.
	Fixes: