@@ -24,6 +24,9 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Slash HMP"]																= "/hmp"
 	L["Abandon Command"]														= "abandon"
 	L["Dialog Command"]															= "dialog"
+	L["Quest Command"]															= "quest"
+	-- Command Shortcuts
+	L["Q"]																		= "q"
 	-- Addon Messages															
 	L["Locale Not Supported"]													= addonName .. " does NOT support " .. locale .. "! Please consider aiding in updating the addon to work for your language."
 	-- Strings																	
